--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,8 @@ body {
 	font-size: 1rem;
 	font-size: 100%;
 	line-height: normal;
-	padding: 10px;
+	padding: 20px;
+	color: #010101;
 }
 #app {
 	position: relative;
@@ -32,10 +33,8 @@ body {
 	max-width: 960px;
 	margin: 0px auto;
 	padding: 20px;
-	border: 1px solid purple;
+	border: 1px solid;
 	overflow: hidden;
 	min-height: 600px;
-	background-color: pink;
-	border-radius: 10px;
-	box-shadow: 0 0 20px pink;
+	border-radius: 5px;
 }
