--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,3 +38,120 @@ body {
 	min-height: 600px;
 	border-radius: 5px;
 }
+#characters .list {
+	margin-bottom: 40px;
+}
+.char {
+	position: relative;
+	width: 25%;
+	padding: 10px;
+	list-style: none;
+	display: inline-block;
+	vertical-align: top;
+}
+.char .edge {
+	border-radius: 10px;
+	overflow: hidden;
+	margin-bottom: 10px;
+	border: 1px solid;
+	box-shadow: 0 0 10px rgba(0,0,0,0.24);
+}
+.char img {
+	max-width: 100%;
+	height: auto;
+	display: block;	
+}
+.char h3,
+.char h4 {
+	font-weight: bold;
+	font-size: 24px;
+	margin: 0 5px;
+}
+.char span {
+	font-size: 12px;
+	margin: 0 5px;
+	padding-left: 5px;
+	border-left: 1px solid;
+	display: block;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+.char .action {
+	font-size: 12px;
+	float: right;
+	margin-right: 5px;
+}
+.char .edit {
+	color: green;
+}
+.char .delete {
+	color: red;
+}
+#sure, 
+#edit {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255,255,255,0.75);
+	display: none;
+	padding: 10px;
+}
+#sure .inner, 
+#edit .inner {
+	position: relative;
+	width: 100%;
+	max-width: 320px;
+	padding: 20px;
+	margin: 0 auto;
+	background-color: #fff;
+	border-radius: 10px;
+	border: 1px solid;
+	box-shadow: 0 10px 10px rgba(0,0,0,0.25);
+}
+#sure .inner .action {
+	text-align: center;
+	padding-top: 10px;
+}
+#sure .inner .delete {
+	display: inline-block;
+	padding: 10px 20px;
+	background-color: red;
+	color: white;
+	border-radius: 5px;
+	font-weight: bold;
+	text-transform: uppercase;
+	font-size: 18px;
+	text-decoration: none;
+}
+#edit .inner {
+	height: auto;
+}
+form {
+	max-width: 320px;
+}
+form h2 {
+	margin-bottom: 10px;
+}
+form input {
+	width: 100%;
+	height: 40px;
+	display: block;
+	border-radius: 5px;
+	border: 1px solid;
+	box-shadow: inset 0 0 10px rgba(0,0,0,0.25);
+	margin: 5px 0;
+	padding: 0 10px;
+	font-size: 16px;
+	font-weight: bold;
+}
+form input[type="file"] {
+	height: auto;
+	padding: 10px;
+}
+form input[type="submit"] {
+	color: #fff;
+	background-color: #262626;
+	margin-top: 10px;
+}
