--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,19 +53,22 @@ body {
 	border-radius: 10px;
 	overflow: hidden;
 	margin-bottom: 10px;
-	border: 1px solid;
+	border: 4px solid;
+	padding: 8px;
 	box-shadow: 0 0 10px rgba(0,0,0,0.24);
+	cursor: pointer;
 }
 .char img {
 	max-width: 100%;
 	height: auto;
-	display: block;	
+	display: block;
 }
 .char h3,
 .char h4 {
 	font-weight: bold;
 	font-size: 24px;
 	margin: 0 5px;
+	cursor: pointer;
 }
 .char span {
 	font-size: 12px;
@@ -154,6 +157,22 @@ form input[type="submit"] {
 	color: #fff;
 	background-color: #262626;
 	margin-top: 10px;
+}
+#view {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: white;
+	display: none;
+}
+#view .close {
+	cursor: pointer;
+	text-align: right;
+	font-size: 20px;
+	font-weight: bold;
+	padding: 10px;
 }
 
 
