--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,7 @@ body {
 	line-height: normal;
 	padding: 20px;
 	color: #010101;
+	background: url(../imgs/bg.jpg) top center no-repeat #000;
 }
 #app {
 	position: relative;
@@ -33,10 +34,18 @@ body {
 	max-width: 960px;
 	margin: 0px auto;
 	padding: 20px;
-	border: 1px solid;
+	border: 2px solid #131a2a;
 	overflow: hidden;
 	min-height: 600px;
 	border-radius: 5px;
+	background-color: #08090e;
+	box-shadow: inset 0 0 20px rgba(0,0,0,0.85);
+}
+#app h1 {
+	padding: 5px 10px;
+	background-color: rgba(255,255,255,0.85);
+	border-radius: 5px;
+	border: 1px solid;
 }
 #characters .list {
 	margin-bottom: 40px;
@@ -49,19 +58,27 @@ body {
 	display: inline-block;
 	vertical-align: top;
 }
+.char .inner {
+	padding: 10px;
+	background-color: rgba(255,255,255,0.85);
+	border-radius: 5px;
+	border: 1px solid;
+}
 .char .edge {
-	border-radius: 10px;
+	border-radius: 5px;
 	overflow: hidden;
 	margin-bottom: 10px;
-	border: 4px solid;
+	border: 4px solid #465734;
 	padding: 8px;
-	box-shadow: 0 0 10px rgba(0,0,0,0.24);
+	box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
 	cursor: pointer;
+	background-color: #fff;
 }
 .char img {
 	max-width: 100%;
 	height: auto;
 	display: block;
+	box-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
 .char h3,
 .char h4 {
@@ -131,6 +148,12 @@ body {
 #edit .inner {
 	height: auto;
 }
+#edit .close {
+	margin-bottom: 20px;
+	text-align: right;
+	font-weight: bold;
+	cursor: pointer;
+}
 form {
 	max-width: 320px;
 }
@@ -148,6 +171,25 @@ form input {
 	padding: 0 10px;
 	font-size: 16px;
 	font-weight: bold;
+	background-color: rgba(255,255,255,0.85);
+	color: #181825;
+}
+::-webkit-input-placeholder {
+   color: #3c3b5a;
+}
+:-moz-placeholder { /* Firefox 18- */
+   color: #3c3b5a; 
+}
+::-moz-placeholder {  /* Firefox 19+ */
+   color: #3c3b5a;  
+}
+:-ms-input-placeholder {  
+   color: #3c3b5a;  
+}
+form .upload {
+	border-radius: 5px;
+	padding: 10px;
+	background-color: rgba(255,255,255,0.85);
 }
 form input[type="file"] {
 	height: auto;
@@ -173,6 +215,12 @@ form input[type="submit"] {
 	font-size: 20px;
 	font-weight: bold;
 	padding: 10px;
+}
+#footer {
+	text-align: center;
+	font-size: 14px;
+	padding: 40px 0 60px;
+	color: #fff;
 }
 
 
@@ -204,7 +252,7 @@ form input[type="submit"] {
   right: 0;
   width: 300px;
   height: 300px;
-  background: #29d;
+  background: #0b0e17;
   -webkit-transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
   -webkit-transform: translateX(100%) translateY(-100%) rotate(45deg);
