--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,7 +284,40 @@ form input[type="submit"] {
 	padding: 30px 0 40px;
 	color: #fff;
 }
-
+/*Mobile*/
+@media only screen and (max-width: 667px) {
+	#app {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.char {
+		width: 100%;
+	}
+	.char img {
+		width: 100%;
+	}
+	form {
+		max-width: 100%;
+	}
+	#view {
+		overflow: auto;
+		padding: 10px;
+	}
+	#view .contents {
+		padding: 10px;
+	}
+	#view .contents .pic {
+		float: none;
+		width: 100%;
+		max-width: 100%;		
+	}
+	#view .contents .pic img {
+		width: 100%;
+	}
+	#view .contents .name {
+		padding-top: 10px;
+	}
+}
 
 #loading {
 	position: fixed;
