--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,7 @@ h1 {
 	border-radius: 5px;
 	overflow: hidden;
 	margin-bottom: 10px;
-	border: 4px solid #465734;
+	border: 2px solid #465734;
 	padding: 8px;
 	box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
 	cursor: pointer;
@@ -230,8 +230,9 @@ form input[type="submit"] {
 #view .contents {
 	margin: 10px auto;
 	padding: 10px;
-	max-width: 720px;
-	border: 1px solid;
+	max-width: 820px;
+	border: 2px solid #465734;
+	border-radius: 10px;
 }
 #view .contents .basic {
 	overflow: hidden;
@@ -245,6 +246,7 @@ form input[type="submit"] {
 	max-width: 100%;
 	height: auto;
 	display: block;
+	border: 2px solid #3c3b5a;
 }
 #view .contents .name {
 	padding-top: 20px;
