--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,6 +281,47 @@ form input[type="submit"] {
 	display: inline-block;
 	vertical-align: middle;
 }
+#view .base {
+	padding-top: 10px;
+	overflow: hidden;
+}
+#view .base ul {
+	width: 100%;
+}
+#view .base li {
+	width: 50%;
+	display: inline-block;
+	margin: 5px 0;
+}
+#view .base li strong {
+	display: inline-block;
+	vertical-align: middle;
+}
+#view .base li span {
+	position: relative;
+	display: inline-block;
+	vertical-align: middle;
+	padding: 0 10px;
+	height: 30px;
+	line-height: 30px;
+	background-color: #444;
+	color: #f1f1f1;
+	margin-left: 10px;
+	box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+	border-radius: 5px;
+	border: 1px solid #262626;
+}
+#view .base li input {	
+	height: 30px;
+	margin-left: 10px;
+	top: 0;
+	left: 0;
+	padding: 0 10px;
+	width: 80px;
+	box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+	border-radius: 5px;
+	border: 1px solid #262626;
+}
 #footer {
 	text-align: center;
 	font-size: 14px;
