--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ input,select{vertical-align:middle}
 i,em{font-style:italic;}
 b,strong{font-weight:bold;}
 body {
-	font-family: sans-serif;
+	font-family: sans-serif;	
 	font-size: 16px;
 	font-size: 1rem;
 	font-size: 100%;
@@ -28,16 +28,25 @@ body {
 	color: #010101;
 	background: url(../imgs/bg.jpg) top center no-repeat #000;
 }
+body.cut {
+	position: absolute;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
 #app {
 	position: relative;
+	font-family: 'Open Sans', sans-serif;
 	width: 100%;
 	max-width: 960px;
 	margin: 0px auto;
 	padding: 20px;
 	border: 2px solid #131a2a;
-	overflow: hidden;
-	min-height: 600px;
 	border-radius: 5px;
+	overflow: hidden;
+	min-height: 600px;	
 	background-color: #08090e;
 	box-shadow: inset 0 0 20px rgba(0,0,0,0.85);
 }
@@ -53,7 +62,7 @@ h1 {
 }
 .char {
 	position: relative;
-	width: 25%;
+	width: 33.33%;
 	padding: 10px;
 	list-style: none;
 	display: inline-block;
@@ -88,8 +97,13 @@ h1 {
 	margin: 0 5px;
 	cursor: pointer;
 }
+.char .name {
+	min-height: 100px;
+}
+.char .info {
+	font-size: 14px;
+}
 .char span {
-	font-size: 12px;
 	margin: 0 5px;
 	padding-left: 5px;
 	border-left: 1px solid;
@@ -98,7 +112,6 @@ h1 {
 	margin-bottom: 10px;
 }
 .char .action {
-	font-size: 12px;
 	float: right;
 	margin-right: 5px;
 }
@@ -216,45 +229,73 @@ form input[type="submit"] {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #f1f1f1;
+	background-color: #2f3242;
+	background: url(../imgs/bg.jpg) top center no-repeat #000;
 	display: none;
 	overflow: auto;
+	padding: 10px 0;
 }
 #view .close {
 	cursor: pointer;
 	text-align: right;
-	font-size: 20px;
+	font-size: 28px;
 	font-weight: bold;
-	padding: 10px;
+	padding: 0px;
+	color: #f1f1f1;
+	position: absolute;
+	top: 5px;
+	right: 15px;
 }
 #view .contents {
+	position: relative;
 	margin: 10px auto;
 	padding: 10px;
 	max-width: 820px;
-	border: 2px solid #465734;
-	border-radius: 10px;
+	border: 0px solid #465734;
+	border-radius: 0px;
+	background-color: #403147;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	border: 2px solid #131a2a;
+	border-radius: 5px;
 }
 #view .contents .basic {
 	overflow: hidden;
 }
+#view .contents .wrap {
+	text-align: center;
+	padding: 40px 0;
+}
 #view .contents .pic {
-	max-width: 250px;
-	float: left;
-	margin-right: 20px;	 
+	width: auto;
+	display: inline-block;
+	margin-right: 40px;
+	vertical-align: middle;
 }
 #view .contents .pic img {
-	max-width: 100%;
+	max-width: 250px;
+	width: 100%;
 	height: auto;
 	display: block;
-	border: 2px solid #3c3b5a;
+	margin: 0 auto;
+	border: 2px solid #ffbd30;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+#view .contents .over {
+	display: inline-block;
+	width: auto;
+	vertical-align: middle;
 }
 #view .contents .name {
-	padding-top: 20px;
+	padding-top: 10px;
 	font-size: 24px;
 	font-weight: bold;
+	color: #3fff30;
+	border-bottom: 1px solid #ffbd30;
 }
 #view .contents .campaign {
 	font-size: 18px;
+	margin-bottom: 10px;
+	color: #30ffe4;
 }
 #view .contents .add {
 	padding-top: 10px;
@@ -282,45 +323,86 @@ form input[type="submit"] {
 	vertical-align: middle;
 }
 #view .base {
-	padding-top: 10px;
+	padding-top: 0px;
 	overflow: hidden;
+	background-color: #262626;
+	padding: 5px;
+}
+#view .base h1 {
+	font-weight: 600;
+	font-size: 24px;
+	text-transform: uppercase;
+	color: #aeff00;
+	padding: 5px;
+	border-radius: 0;
+	margin: 0;
+	border: 0;
 }
 #view .base ul {
 	width: 100%;
+	margin-bottom: 0;
 }
 #view .base li {
-	width: 50%;
+	width: 33.33%;
 	display: inline-block;
 	margin: 5px 0;
+	padding: 0 5px;
+	vertical-align: top;
 }
 #view .base li strong {
 	display: inline-block;
 	vertical-align: middle;
+	display: block;
+	color: #999;
+	font-weight: 600;
 }
 #view .base li span {
 	position: relative;
 	display: inline-block;
+	display: block;
 	vertical-align: middle;
-	padding: 0 10px;
-	height: 30px;
-	line-height: 30px;
-	background-color: #444;
+	padding: 0;
+	// height: 30px;
+	// line-height: 30px;
+	// background-color: #444;
 	color: #f1f1f1;
-	margin-left: 10px;
-	box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
-	border-radius: 5px;
-	border: 1px solid #262626;
+	margin-left: 0px;
+	font-weight: 600;
+	// box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
+	// border-radius: 5px;
+	// border: 1px solid #262626;
+	margin: 0;
+	overflow: hidden;
+	font-size: 28px;
+	border-bottom: 1px solid transparent;
 }
 #view .base li input {	
-	height: 30px;
-	margin-left: 10px;
-	top: 0;
-	left: 0;
-	padding: 0 10px;
-	width: 80px;
-	box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
-	border-radius: 5px;
-	border: 1px solid #262626;
+	margin-left: 0px;
+	font-weight: 600;
+	font-size: 28px;
+	font-family: 'Open Sans', sans-serif;
+	height: 38px;
+	width: 100%;
+	background-color: transparent;
+	border: 0;
+	color: #f1f1f1;
+	border-bottom: 1px solid #f1f1f1;
+	outline: none;
+}
+#view .base li ::-webkit-input-placeholder {
+   color: #f1f1f1;
+}
+#view .base li :-moz-placeholder { /* Firefox 18- */
+   color: #f1f1f1; 
+}
+#view .base li ::-moz-placeholder {  /* Firefox 19+ */
+   color: #f1f1f1;  
+}
+#view .base li :-ms-input-placeholder {  
+   color: #f1f1f1;  
+}
+#view .node {
+	cursor: pointer;
 }
 #footer {
 	text-align: center;
@@ -359,6 +441,12 @@ form input[type="submit"] {
 	}
 	#view .contents .name {
 		padding-top: 10px;
+	}
+	#view .contents .over {
+		width: 100%;
+	}
+	#view .base li {
+		width: 100%;
 	}
 }
 
