--- a/public/css/style.css
+++ b/public/css/style.css
@@ -403,20 +403,22 @@ form input[type="submit"] {
 	font-size: 24px;
 	border-bottom: 1px solid transparent;
 }
-#view .one li input {	
+#view .one li div {	
 	margin-left: 0px;
 	font-weight: 600;
 	font-size: 24px;
 	font-family: 'Open Sans', sans-serif;
-	height: 34px;
+	// height: 34px;
 	width: 100%;
+	max-width: 100%;
 	background-color: transparent;
 	border: 0;
 	color: #f1f1f1;
 	border-bottom: 1px solid transparent;
 	outline: none;
+	resize: none;
 }
-#view .one li.editing input {
+#view .one li.editing div {
 	border-bottom: 1px solid #f1f1f1;
 }
 #view .one li ::-webkit-input-placeholder {
