--- a/public/css/style.css
+++ b/public/css/style.css
@@ -409,20 +409,23 @@ form input[type="submit"] {
 	font-size: 24px;
 	border-bottom: 1px solid transparent;
 }
-#view .one li div {	
+#view .one li div,
+#view .one li .cop {	
 	margin-left: 0px;
 	font-weight: 600;
 	font-size: 24px;
 	font-family: 'Open Sans', sans-serif;
 	// height: 34px;
-	width: 100%;
-	max-width: 100%;
+	// width: 100%;
+	// max-width: 100%;
 	background-color: transparent;
 	border: 0;
 	color: #f1f1f1;
 	border-bottom: 1px solid transparent;
 	outline: none;
 	resize: none;
+	display: inline-block;
+	vertical-align: top;
 }
 #view .one.ability li div {
 	display: inline-block;
