--- a/public/css/sheet.css
+++ b/public/css/sheet.css
@@ -15,6 +15,9 @@
 	padding: 10px;
 	text-align: right;
 }
+#stats .contents {
+	padding-bottom: 30px;
+}
 .sheet {
 	position: relative;
 	padding: 1%;
@@ -25,7 +28,7 @@
 }
 .row {
 	padding: 0;
-	margin: 0 0 10px;
+	margin: 0 0 20px;
 	background-color: #212121;
 }
 .row:last-child {
@@ -33,7 +36,7 @@
 }
 .cell {
 	display: inline-block;
-	vertical-align: middle;
+	vertical-align: top;
 	padding: 10px;
 	margin: 0 0 0 0;
 	// background-color: #313131;
@@ -91,6 +94,20 @@
 	border: 1px solid #313131;
 	border-radius: 5px;
 }
+.adder {
+	padding: 10px 0;
+	font-size: 14px;
+	line-height: 14px;
+	font-weight: 700;
+	color: #fff;
+	text-transform: uppercase;
+}
+.adder .add {
+	background-color: #818181;
+	display: inline-block;
+	padding: 5px 10px;
+	border-radius: 5px;
+}
 .thumb {
 	width: 25%;
 }
@@ -111,9 +128,13 @@
 }
 .scores {
 	width: 50%;
+	display: inline-block;
+	vertical-align: top;
 }
 .ability {
 	width: 100%;
+	display: inline-block;
+	vertical-align: top;
 }
 .ability .list {
 	width: 33.33%;
@@ -153,6 +174,9 @@
 }
 .bag {
 	width: 50%;
+}
+.bag .list {
+	width: 100%;
 }
 .cell.pouch {
 	width: 50%;
