--- a/comps/comps.css
+++ b/comps/comps.css
@@ -31,6 +31,9 @@ body {
 	border-radius: 5px;
 	color: #eee;	
 }
+.weapons .form {
+	display: none;
+}
 .weapon {
 	position: relative;
 	width: 100%;
