--- a/comps/comps.css
+++ b/comps/comps.css
@@ -22,6 +22,7 @@ body {
 	line-height: 20px;
 }
 .weapons {
+	text-align: center;
 	padding: 10px;
 }
 .weapons .add {
@@ -29,13 +30,69 @@ body {
 	background-color: #444;
 	border: 1px solid #222;
 	border-radius: 5px;
-	color: #eee;	
+	color: #eee;
+	margin-bottom: 5px;
+	cursor: pointer;
+}
+.weapons .form .close {
+	padding: 10px;
+	background-color: #444;
+	border: 2px solid #222;
+	border-radius: 5px;
+	color: #eee;
+	margin-bottom: 5px;
+	cursor: pointer;
+	width: 100%;
+	font-size: 16px;
+	line-height: 16px;
+	font-weight: bold;
+}
+.weapons .form {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding: 10px 10px 20px;	
+	background-color: rgba(0,0,0,1);
+	overflow: auto;
+	z-index: 999;
+	display: none;
+}
+.weapons .form form {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 480px;
+	display: block;
+}
+.weapons .form input,
+.weapons .form select,
+.weapons .form textarea {
+	border: 1px solid #262626;
+	color: #222;
+	font-weight: 700;
+	padding: 10px;
+	border-radius: 5px;
+	width: 100%;
+	max-width: 100%;
+	background-color: #fff;
+	box-shadow: 0 0 10px rgab(0,0,0,0.5);
+	margin: 5px 0;
+}
+.weapons .form label {
+	color: #fff;
+	text-align: left;
+	display: block;
+	width: 100%;
+	font-weight: 700;
+	padding-top: 10px;
 }
 .weapon {
 	position: relative;
 	width: 100%;
 	max-width: 320px;
-	margin: 10px auto;
+	margin: 5px;
+	display: inline-block;
 	padding: 10px;
 	background-color: #666;
 	font-size: 16px;
@@ -44,30 +101,85 @@ body {
 	border-radius: 5px;
 	border: 2px solid #444;
 	box-shadow: 0px 1px 3px rgba(0,0,0,0.5);
+	text-align: left;
+	overflow: hidden;
+	cursor: pointer;
+}
+.weapon .options {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.75);
+	z-index: 1;
+	top: -100%;
+	-webkit-transition: 0.25s ease-in-out;
+	transition: 0.25s ease-in-out;
+}
+.weapon.click .options {
+	top: 0;
+}
+.weapon .options .btns {
+	display: inline-table;
+	width: 100%;
+	height: 100%;
+}
+.weapon .options .btns .cell {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
+.weapon .options .btns button {
+	display: inline-block;
+	width: auto;
+	padding: 10px 20px;
+	border: 1px solid #fff;
+	color: #262626;
+	border-radius: 3px;
+	font-size: 14px;
+	line-height: 14px;
+	font-weight: 700;
+	margin: 5px;
+	cursor: pointer;
+}
+.weapon .options .btns button.equip {
+	background-color: greenyellow;
+}
+.weapon .options .btns button.edit {
+	background-color: lightseagreen;
+}
+.weapon .options .btns button.delete {
+	background-color: crimson;
+}
+.weapon .attr {
+	position: relative;
+	min-height: 48px;	
 }
 .weapon .img {
-	display: inline-block;
-	vertical-align: middle;
+	display: block;	
 	width: 48px;
 	height: 48px;
 	background-color: #444;
 	text-align: center;
 	border-radius: 5px;
 	border: 2px solid #222;
+	position: absolute;
+	left: 0;
+	top: 50%;
+	margin-top: -24px;
 }
 .weapon .img i {
 	line-height: 42px;
 	margin: 0;
 }
 .weapon .name {
-	display: inline-block;
-	vertical-align: middle;
+	display: block;
 	font-size: 18px;
 	line-height: normal;
-	padding: 5px 10px;
+	padding: 5px 26px 5px 58px;
 	width: 100%;
-	max-width: 214px;
-	color: orange;
+	color: aqua;
 }
 .weapon .stats {
 	padding-top: 10px;
@@ -82,8 +194,8 @@ body {
 }
 .weapon .equipped {
 	position: absolute;
-	top: 10px;
-	right: 10px;
+	top: 0;
+	right: 0px;
 	display: none;
 	font-size: 16px;
 	line-height: 16px;
